# FilesCollectionService

./: CMakeLists.txt  README.adoc
src/: collection_service_runner.cpp  collection_service_runner.hpp  copy_service.cpp  copy_service.hpp  message_buffer.hpp  scan_service.cpp  scan_service.hpp  service_runner.cpp
src/test/: collection_service_test.cpp  collection_service_test.hpp
src/utils/: files_generator.cpp  files_generator.hpp  program_arguments.cpp  program_arguments.hpp  tar_archive.cpp  tar_archive.hpp
